# mundus-animarum

./: .gitignore  Cargo.toml  README.md  build-and-test.sh  build.sh  install.sh  objectiveai-version.sh  objectiveai.json  test.sh  version.sh
.config/: nextest.toml
.github/workflows/: release.yml
mundus-animarum-cli/: Cargo.toml
mundus-animarum-cli/src/: context.rs  error.rs  lib.rs  main.rs  run.rs
mundus-animarum-cli/src/command/: agent_ref.rs  mod.rs  subscription.rs
mundus-animarum-cli/src/command/get/: mod.rs
mundus-animarum-cli/src/command/list/: mod.rs
mundus-animarum-cli/src/command/notifications/: mod.rs
mundus-animarum-cli/src/command/set/: mod.rs
mundus-animarum-cli/src/command/subscribe/: mod.rs
mundus-animarum-cli/src/command/unsubscribe/: mod.rs
mundus-animarum-cli/src/commands/: mod.rs
mundus-animarum-db/: Cargo.toml  MUTUALLY_EXCLUSIVE_FEATURE_FLAGS.md
mundus-animarum-db/src/: database.rs  lib.rs  mock.rs  postgres.rs  sqlite.rs
mundus-animarum-mcp/: Cargo.toml
mundus-animarum-sdk/: Cargo.toml
mundus-animarum-sdk/src/: lib.rs
src/: command.rs  context.rs  delete.rs  error.rs  get.rs  lib.rs  list.rs  main.rs  set.rs  subscribe.rs  unsubscribe.rs
src/command/: delete.rs  get.rs  list.rs  mod.rs  notifications.rs  set.rs  subscribe.rs  subscription.rs  subscriptions.rs  unsubscribe.rs
src/command/daemon/: begin.rs  mod.rs
src/command/mcp/: mod.rs
src/command/mcp/mundus_animarum/: begin.rs  mod.rs
src/db/: mod.rs
src/mcp/: header_session_manager.rs  mod.rs  run.rs  session.rs  tools.rs
tests/: cli.rs  cross_channel.rs  mcp.rs  smoke.rs
tests/common/: mod.rs
