[package]
name = "mundus-animarum"
version = "1.0.0"
edition = "2024"
authors = ["ObjectiveAI <admin@objectiveai.dev>"]
description = "Command-line interface for mundus-animarum — the world of ObjectiveAI agent souls."
license = "MIT"
repository = "https://github.com/ObjectiveAI/mundus-animarum"
homepage = "https://objectiveai.dev"
documentation = "https://docs.rs/mundus-animarum"
readme = "README.md"
keywords = ["llm", "ai", "agent", "soul", "cli"]
publish = true

[[bin]]
name = "mundus-animarum"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
dotenv = "0.15.0"
envconfig = "0.11.1"
objectiveai-sdk = { version = "2.2.0", default-features = false, features = ["cli"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync"] }
