[package]
name = "mundus-animarum"
version = "0.1.0"
edition = "2024"
authors = ["ObjectiveAI <admin@objectiveai.dev>"]
description = "Command-line interface for mundus-animarum — the world of ObjectiveAI agent souls."
license = "MIT"
repository = "https://github.com/ObjectiveAI/mundus-animarum"
homepage = "https://objectiveai.dev"
documentation = "https://docs.rs/mundus-animarum"
readme = "README.md"
keywords = ["llm", "ai", "agent", "soul", "cli"]
publish = true

[[bin]]
name = "mundus-animarum"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
dotenv = "0.15.0"
envconfig = "0.11.1"
futures = "0.3.32"
http = "1.4.2"
objectiveai-sdk = { version = "2.2.3", default-features = false, features = ["cli"] }
rmcp = { version = "0.16.0", features = ["server", "transport-streamable-http-server"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "net"] }
tokio-util = "0.7.18"

[dev-dependencies]
# Integration tests drive the installed plugin through the objectiveai host via
# the SDK's BinaryExecutor (cli-executor). This is dev-only — the released
# binary keeps just the `cli` feature. (futures + tokio-util are already normal
# deps; tokio gains the `process` feature here for BinaryExecutor's spawns.)
objectiveai-sdk = { version = "2.2.3", default-features = false, features = ["cli", "cli-executor"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process"] }
