[package]
name = "mundus-animarum-cli"
version = "0.1.0"
edition = "2024"
authors = ["ObjectiveAI <admin@objectiveai.dev>"]
description = "Command-line interface for mundus-animarum — the world of ObjectiveAI agent souls."
license = "MIT"
repository = "https://github.com/ObjectiveAI/mundus-animarum"
homepage = "https://objectiveai.dev"
documentation = "https://docs.rs/mundus-animarum-cli"
readme = "README.md"
keywords = ["llm", "ai", "agent", "soul", "cli"]
publish = true

[[bin]]
name = "mundus-animarum"
path = "src/main.rs"

[dependencies]
