[package]
name = "mundus-animarum-db"
version = "0.1.0"
edition = "2024"
authors = ["ObjectiveAI <admin@objectiveai.dev>"]
description = "Database layer for mundus-animarum — storage for ObjectiveAI agent souls."
license = "MIT"
repository = "https://github.com/ObjectiveAI/mundus-animarum"
homepage = "https://objectiveai.dev"
documentation = "https://docs.rs/mundus-animarum-db"
readme = "README.md"
keywords = ["llm", "ai", "agent", "soul", "database"]
publish = true

[dependencies]
