[package]
name = "mundus-animarum-mcp"
version = "1.0.0"
edition = "2024"
authors = ["ObjectiveAI <admin@objectiveai.dev>"]
description = "MCP (Model Context Protocol) server for mundus-animarum — the world of ObjectiveAI agent souls."
license = "MIT"
repository = "https://github.com/ObjectiveAI/mundus-animarum"
homepage = "https://objectiveai.dev"
documentation = "https://docs.rs/mundus-animarum-mcp"
readme = "README.md"
keywords = ["llm", "ai", "agent", "soul", "mcp"]
publish = true

[dependencies]
